--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My title</title>
-        <link rel="stylesheet" href="./styles/layout.css"/>
+        <link rel="stylesheet" href="./styles/layout1.css"/>
         <style>
         </style>
     </head>
