--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
     <div id="wrapper">
     <header>
-        <h1>Title</h1>
+        <h1 class="main">Title</h1>
     </header>
     
     <nav>
