--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     
     <body>
     <div id="wrapper">
-    <header>
-        <h1 class="main">Title</h1>
+    <header class="title">
+        <h1>Title</h1>
     </header>
     
     <nav>
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     <article>
-        <header>
+        <header class="article">
             <h1>Article</h1>
         </header>
     </article>
