--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <header class="article">
             <h1>Article</h1>
         </header>
+        <img src="">
     </article>
     <aside>
         <ul>
