--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <header class="article">
             <h1>Article</h1>
         </header>
-        <img src="">
+        <img src="https://drive.google.com/uc?id=/0ByZtawMKUTb1VmFwbjF4TzczSkE">
     </article>
     <aside>
         <ul>
